# cpp_aruco_opencv

./: CMakeLists.txt  main.cpp
